added allow traversal flag
