# controller/api_impl/router_api_model.go
@@ -55,9 +55,10 @@ func MapCreateRouterToModel(router *rest_model.RouterCreate) *network.Router {
 			Id:   stringz.OrEmpty(router.ID),
 			Tags: TagsOrDefault(router.Tags),
 		},
-		Name:        stringz.OrEmpty(router.Name),
-		Fingerprint: router.Fingerprint,
-		Cost:        uint16(Int64OrDefault(router.Cost)),
+		Name:           stringz.OrEmpty(router.Name),
+		Fingerprint:    router.Fingerprint,
+		Cost:           uint16(Int64OrDefault(router.Cost)),
+		AllowTraversal: BoolOrDefault(router.AllowTraversal),
 	}
 
 	return ret
@@ -69,9 +70,10 @@ func MapUpdateRouterToModel(id string, router *rest_model.RouterUpdate) *network
 			Tags: TagsOrDefault(router.Tags),
 			Id:   id,
 		},
-		Name:        stringz.OrEmpty(router.Name),
-		Fingerprint: router.Fingerprint,
-		Cost:        uint16(Int64OrDefault(router.Cost)),
+		Name:           stringz.OrEmpty(router.Name),
+		Fingerprint:    router.Fingerprint,
+		Cost:           uint16(Int64OrDefault(router.Cost)),
+		AllowTraversal: BoolOrDefault(router.AllowTraversal),
 	}
 
 	return ret
@@ -83,9 +85,10 @@ func MapPatchRouterToModel(id string, router *rest_model.RouterPatch) *network.R
 			Tags: TagsOrDefault(router.Tags),
 			Id:   id,
 		},
-		Name:        router.Name,
-		Fingerprint: router.Fingerprint,
-		Cost:        uint16(Int64OrDefault(router.Cost)),
+		Name:           router.Name,
+		Fingerprint:    router.Fingerprint,
+		Cost:           uint16(Int64OrDefault(router.Cost)),
+		AllowTraversal: BoolOrDefault(router.AllowTraversal),
 	}
 
 	return ret
@@ -129,12 +132,13 @@ func MapRouterToRestModel(n *network.Network, _ api.RequestContext, router *netw
 	isConnected := connected != nil
 	cost := int64(router.Cost)
 	ret := &rest_model.RouterDetail{
-		BaseEntity:  BaseEntityToRestModel(router, RouterLinkFactory),
-		Fingerprint: router.Fingerprint,
-		Name:        &router.Name,
-		Connected:   &isConnected,
-		VersionInfo: restVersionInfo,
-		Cost:        &cost,
+		BaseEntity:     BaseEntityToRestModel(router, RouterLinkFactory),
+		Fingerprint:    router.Fingerprint,
+		Name:           &router.Name,
+		Connected:      &isConnected,
+		VersionInfo:    restVersionInfo,
+		Cost:           &cost,
+		AllowTraversal: &router.AllowTraversal,
 	}
 
 	return ret, nil
