# controller/handler_mgmt/create_router.go
@@ -42,7 +42,7 @@ func (h *createRouterHandler) HandleReceive(msg *channel.Message, ch channel.Cha
 
 	create := &mgmt_pb.CreateRouterRequest{}
 	if err := proto.Unmarshal(msg.Body, create); err == nil {
-		r := network.NewRouter(create.Router.Id, create.Router.Name, create.Router.Fingerprint, uint16(create.Router.Cost))
+		r := network.NewRouter(create.Router.Id, create.Router.Name, create.Router.Fingerprint, uint16(create.Router.Cost), create.Router.AllowTraversal)
 		if err := h.network.CreateRouter(r); err == nil {
 			log.Infof("created router [r/%s] with fingerprint [%s]", r.Id, create.Router.Fingerprint)
 			handler_common.SendSuccess(msg, ch, "")
