# rest_model/router_create.go
@@ -43,6 +43,10 @@ import (
 // swagger:model routerCreate
 type RouterCreate struct {
 
+	// allow traversal
+	// Required: true
+	AllowTraversal *bool `json:"allowTraversal"`
+
 	// cost
 	// Required: true
 	// Maximum: 65535
@@ -68,6 +72,10 @@ type RouterCreate struct {
 func (m *RouterCreate) Validate(formats strfmt.Registry) error {
 	var res []error
 
+	if err := m.validateAllowTraversal(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validateCost(formats); err != nil {
 		res = append(res, err)
 	}
@@ -87,6 +95,15 @@ func (m *RouterCreate) Validate(formats strfmt.Registry) error {
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *RouterCreate) validateAllowTraversal(formats strfmt.Registry) error {
+
+	if err := validate.Required("allowTraversal", "body", m.AllowTraversal); err != nil {
+		return err
+	}
+
 	return nil
 }
 
