# rest_model/router_detail.go
@@ -44,6 +44,10 @@ import (
 type RouterDetail struct {
 	BaseEntity
 
+	// allow traversal
+	// Required: true
+	AllowTraversal *bool `json:"allowTraversal"`
+
 	// connected
 	// Required: true
 	Connected *bool `json:"connected"`
@@ -80,6 +84,8 @@ func (m *RouterDetail) UnmarshalJSON(raw []byte) error {
 
 	// AO1
 	var dataAO1 struct {
+		AllowTraversal *bool `json:"allowTraversal"`
+
 		Connected *bool `json:"connected"`
 
 		Cost *int64 `json:"cost"`
@@ -95,6 +101,8 @@ func (m *RouterDetail) UnmarshalJSON(raw []byte) error {
 	if err := swag.ReadJSON(raw, &dataAO1); err != nil {
 		return err
 	}
+
+	m.AllowTraversal = dataAO1.AllowTraversal
 
 	m.Connected = dataAO1.Connected
 
@@ -121,6 +129,8 @@ func (m RouterDetail) MarshalJSON() ([]byte, error) {
 	}
 	_parts = append(_parts, aO0)
 	var dataAO1 struct {
+		AllowTraversal *bool `json:"allowTraversal"`
+
 		Connected *bool `json:"connected"`
 
 		Cost *int64 `json:"cost"`
@@ -133,6 +143,8 @@ func (m RouterDetail) MarshalJSON() ([]byte, error) {
 
 		VersionInfo *VersionInfo `json:"versionInfo,omitempty"`
 	}
+
+	dataAO1.AllowTraversal = m.AllowTraversal
 
 	dataAO1.Connected = m.Connected
 
@@ -163,6 +175,10 @@ func (m *RouterDetail) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
+	if err := m.validateAllowTraversal(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validateConnected(formats); err != nil {
 		res = append(res, err)
 	}
@@ -186,6 +202,15 @@ func (m *RouterDetail) Validate(formats strfmt.Registry) error {
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *RouterDetail) validateAllowTraversal(formats strfmt.Registry) error {
+
+	if err := validate.Required("allowTraversal", "body", m.AllowTraversal); err != nil {
+		return err
+	}
+
 	return nil
 }
 
